All Changes Done

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "This is Assignment for Weavr company.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "triggerAllTests-headless": "npx cypress run",
+    "triggerAllTests-headed": "npx cypress run --headed",
+    "triggerAllTests-chrome": "npx cypress run --browser chrome"
   },
   "author": "Taimoor Pasha",
   "license": "ISC",
